--- a/package.json
+++ b/package.json
@@ -4,16 +4,24 @@
   "description": "Shopping list built with the MERN stack",
   "main": "index.js",
   "scripts": {
+    "client-install": "npm install --prefix client",
+    "client": "npm start --prefix client",
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "concurrently": "^6.0.2",
+    "create-react-app": "^4.0.3",
     "express": "^4.17.1",
     "mongoose": "^5.12.7",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "concurrently": "^6.0.2"
   }
 }
