--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^6.0.2",
     "create-react-app": "^4.0.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "config": "1.0.0"
   },
   "devDependencies": {
     "concurrently": "^6.0.2"
